tests/errors/bad_type_assign.erbos
spark {
  x is 10
  x be "hello"
}
